# BetaBank

./: .gitignore  Camera.py  Detection.py  LICENSE  Qs.md  README.md  aruco.py  calibrate.py  capture.py  effects.py  frame_analyser.py  main.py  markers.py  object_3d.py  open_gl.py  openglglyphs.py  overlay.py  plane_test.py  pygame_test.py  requirements.txt  test_main.py  view.py  websocket.py
betabank/: LICENSE  README.rst  pyproject.toml  unit_test.sh
betabank/src/: calibrate.py  camera.py  capture.py  detection.py  main.py  static_server.py  view.py
betabank/src/betabank/: __main__.py  app.py  calibrate.py  camera.py  capture.py  detection.py  frame_analyser.py  main.py  static_server.py  test_frame_analyser.py  test_main.py  view.py
betabank/src/betabank.dist-info/: METADATA
betabank/src/betabank/ui/test_images_1280x720/: capture_0_FD.npy  capture_8_FD.npy
betabank/src/betabank/ui/test_images_1920x1080/: capture_2_FD.npy  capture_3_FD.npy  example_corrected_rotations.md  example_frame_data.md
betabank/src/ui/test_images_1280x720/: capture_9_FD.npy
betabank/src/ui/test_images_1920x1080/: capture_4_FD.npy
calibration_images/: calibration_images.yaml
calibration_images_1920x1080/: calibration_images_1920x1080.yaml
calibration_images_old/: calibration_images_old.yaml
test_images_1280x720/: capture_8.png~
test_images_1920x1080/: capture_1_FD.npy  capture_2_FD.npy
test_images_1920x1080/old/: capture_2_FD.npy
test_videos_1920x1080/: test1_FD.npy
ui/: index.html  test1.webm  three.js
ui/test_videos_1920x1080/: test1_FD.npy
(+1 files in other folders)
